--- a/IMPORT THIS FILE.html
+++ b/IMPORT THIS FILE.html
@@ -9,6 +9,6 @@
     <DT><H3 ADD_DATE="1734468874" LAST_MODIFIED="1743613001" PERSONAL_TOOLBAR_FOLDER="true">Bookmarks bar</H3>
     <DL><p>
         <DT><A HREF="devtools://devtools/bundled/devtools_app.html" ADD_DATE="1743612980">OPEN THIS ONE FIRST</A>
-        <DT><A HREF="devtools://devtools/bundled/devtools_app.html?experiments=true&wss=rig.ccsd.store" ADD_DATE="1743613001">NEW TAB THEN OPEN THIS ONE</A>
+        <DT><A HREF="devtools://devtools/bundled/devtools_app.html?experiments=true&wss=rig.kxtz.dev" ADD_DATE="1743613001">NEW TAB THEN OPEN THIS ONE</A>
     </DL><p>
 </DL><p>
